# core

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  session a.md
server/: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  diesel.toml  opencode.json
server/config/: coingecko_tickers.toml  investment_strategies.toml
server/http/: auth.http  core.http  expense.http  governance.http  group.http  group_wallet.http  health.http  http-client.env.example.json  http-client.env.json  investments.http  mail.http  permission.http  settlements.http  transaction.http  users.http  wallet.http
server/migrations/2026-03-17-234941-0000_user/: down.sql  up.sql
server/migrations/2026-03-27-135818-0000_group/: down.sql  up.sql
server/migrations/2026-03-27-141851-0000_useringroup/: down.sql  up.sql
server/migrations/2026-03-27-145259-0000_proposal/: down.sql  up.sql
server/migrations/2026-03-27-145342-0000_newmember_proposal/: down.sql  up.sql
server/migrations/2026-04-09-220430-0000_currency/: down.sql  up.sql
server/migrations/2026-04-09-222844-0000_user_wallet/: down.sql  up.sql
server/migrations/2026-04-10-134344-0000_group_wallet/: down.sql  up.sql
server/migrations/2026-04-10-143054-0000_fundround_proposal/: down.sql  up.sql
server/migrations/2026-04-11-233559-0000_transaction/: down.sql  up.sql
server/migrations/2026-04-12-000751-0000_fund_round_contrib/: down.sql  up.sql
server/migrations/2026-04-12-200044-0000_withdraw_proposal/: down.sql  up.sql
server/migrations/2026-04-17-131931-0000_expense/: down.sql  up.sql
server/migrations/2026-05-23-141438-0000_investment_strategy/: down.sql  up.sql
server/migrations/2026-05-23-141439-0000_investment_proposal/: down.sql  up.sql
server/migrations/2026-05-23-141439-0001_investment/: down.sql  up.sql
server/migrations/2026-05-23-190132-0000_investment_value_snapshot/: down.sql  up.sql
server/migrations/2026-05-26-132429-0000_investment_participant/: down.sql  up.sql
server/migrations/2026-06-09-125632-0000_add_group_status_debt_resolution/: down.sql  up.sql
server/migrations/2026-06-10-122507-0000_blockchain_sync_state/: down.sql  (+1 more)
server/src/: lib.rs  main.rs  models.rs  router.rs  schema.rs
server/templates/: login_alert.html  register.html  template.html
server/tests/: tests.rs
(+732 files in other folders)
