[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres", "uuid", "r2d2", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
dotenvy = "0.15"
axum = { version = "0.8.8", features = ["macros"] }
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50", features = ["full"] }
r2d2 = "0.8.10"
thiserror = "2.0.18"
tower-http = { version = "0.6.2", features = ["cors"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
rand = "0.8.5"
validator = "0.20.0"
